<resources>
    <string name="app_name">SprintProject</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="create_account">Create An Account</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="quit">Quit</string>
    <string name="start">Start</string>
    <string name="destination">Destination</string>
    <string name="logistics">Logistics</string>
    <string name="dining">Dining</string>
    <string name="accommodations">Accommodations</string>
    <string name="community">Community</string>
    <string name="welcome_to_the_location_screen">Welcome to Location</string>
    <string name="welcome_to_the_forum">Welcome to Forum</string>
    <string name="dining_screen">Welcome to Dining</string>
    <string name="welcome_to_logistics">Welcome to Logistics</string>
    <string name="welcome_to_accommodations">Welcome to Accommodations</string>
    <string name="calculate_vacation_time">Calculate Vacation Time</string>
    <string name="log_travel">Log Travel</string>
    <string name="no_days_planned">0 days planned</string>
    <string name="reservation">Reservation</string>
    <string name="AddAccomodation">Add Accommodation</string>
    <string name="sort_by_check_in">Sort by Check-in</string>
    <string name="sort_by_check_out">Sort by Check-out</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="sort_by_time">Sort by Time</string>
    <string name="add_note">Add Note</string>
    <string name="select_check_in_date">Select Check-in Date</string>
    <string name="select_check_out_date">Select Check-out Date</string>
</resources>