<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="10dp"
    android:layout_gravity="bottom">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <ImageButton
            android:id="@+id/logisticsButton"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_logistics"
            android:contentDescription="@string/logistics"
            android:layout_height="40dp"
            android:layout_width="40dp" />


        <ImageButton
            android:id="@+id/destinationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_location"
            android:contentDescription="@string/destination" />


        <ImageButton
            android:id="@+id/diningButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_dining"
            android:contentDescription="@string/dining" />


        <ImageButton
            android:id="@+id/accommodationsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_accommodations"
            android:contentDescription="@string/accommodations" />


        <ImageButton
            android:id="@+id/communityButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_community"
            android:contentDescription="@string/community" />

    </LinearLayout>
</FrameLayout>