<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.location.LocationActivity">

    <TextView
        android:id="@+id/locationHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/welcome_to_the_location_screen"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/navbar"
        layout="@layout/navbar_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logTravelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_travel"
        android:backgroundTint="@color/orange"
        app:layout_constraintTop_toBottomOf="@id/locationHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <Button
        android:id="@+id/calculateVacationTime"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/orange"
        android:text="@string/calculate_vacation_time"
        app:layout_constraintTop_toBottomOf="@id/logTravelButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

    <LinearLayout
        android:id="@+id/destinationContainer"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/calculateVacationTime"/>

</androidx.constraintlayout.widget.ConstraintLayout>
